# ImportAndUseLibraries

./: CMakeLists.txt  README.md
CMakeUtils/FindOrFetch/: FindOrFetchLibrarySuite1.cmake
UseImportedLibsNeedsCpp11/: CMakeLists.txt
UseImportedLibsNeedsCpp11/hdr/: UseImportedLibs.hpp
UseImportedLibsNeedsCpp11/src/: MainUseImportedLibs.cpp  UseImportedLibs.cpp
